fix: Portofolio - filters with in mobile and it's title bottom spacing

--- a/client/src/pages/scss/portofolio.scss
+++ b/client/src/pages/scss/portofolio.scss
@@ -64,7 +64,7 @@
 
       h4 {
         font-size: 24px;
-        margin-right: 50px;
+        margin: 15px 50px 15px 0;
         border-bottom: 2.5px solid var(--tertiary);
       }
 
@@ -94,8 +94,9 @@
       padding: 40px 50px 50px;
 
       &.filters {
-        h4 {
-          margin-bottom: 15px;
+        .select {
+          min-width: unset;
+          width: 100%;
         }
       }
     }
